--- a/Wacs.Console/Wacs.Console.csproj
+++ b/Wacs.Console/Wacs.Console.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Wacs.Core\Wacs.Core.csproj" />
     <ProjectReference Include="..\Wacs.Extensions\Wacs.Extensions.csproj" />
+    <ProjectReference Include="..\Wacs.WASIp1\Wacs.WASIp1.csproj" />
   </ItemGroup>
 
   <ItemGroup>
