Adding wasi-test suite submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Spec.Test/spec"]
 	path = Spec.Test/spec
 	url = git@github.com:WebAssembly/spec.git
+[submodule "Spec.Test/wasi"]
+	path = Spec.Test/wasi
+	url = git@github.com:WebAssembly/wasi-testsuite.git
