Adding a progressbar to Spec.Test and making it easier to dispatch tests.

--- a/Spec.Test/Spec.Test.csproj
+++ b/Spec.Test/Spec.Test.csproj
@@ -16,4 +16,8 @@
       <ProjectReference Include="..\Wacs.WASIp1\Wacs.WASIp1.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="ShellProgressBar" Version="5.2.0" />
+    </ItemGroup>
+
 </Project>
