Setting up nuget workflows, attributes, and readmes

--- a/Wacs.WASIp1/Wacs.WASIp1.csproj
+++ b/Wacs.WASIp1/Wacs.WASIp1.csproj
@@ -4,6 +4,36 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <LangVersion>9</LangVersion>
         <Nullable>enable</Nullable>
+        <Title>Wacs WASIp1</Title>
+        <PackageId>WACS.WASIp1</PackageId>
+        <Authors>Kelvin Nishikawa</Authors>
+        <Description>WASI preview 1 implementation for WACS</Description>
+        <Copyright>(c) 2024 Kelvin Nishikawa</Copyright>
+        <PackageProjectUrl>https://github.com/kelnishi/WACS</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/kelnishi/WACS</RepositoryUrl>
+        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <AssemblyVersion>0.9.0</AssemblyVersion>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Version>0.9.0</Version>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <None Update="README.md">
+            <Pack>true</Pack>
+            <PackagePath/>
+        </None>
+        <None Update="README.md">
+          <Pack>true</Pack>
+          <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
+    
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DebugSymbols>true</DebugSymbols>
     </PropertyGroup>
 
     <ItemGroup>
