--- a/Wacs.Core/Wacs.Core.csproj
+++ b/Wacs.Core/Wacs.Core.csproj
@@ -5,20 +5,34 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>9</LangVersion>
-    <AssemblyVersion>0.1.0</AssemblyVersion>
-    <FileVersion>0.1.0</FileVersion>
-    <Version>0.1.0</Version>
+    <AssemblyVersion>0.1.1</AssemblyVersion>
+    <FileVersion>0.1.1</FileVersion>
+    <Version>0.1.1</Version>
     <Authors>Kelvin Nishikawa</Authors>
     <Description>A Pure C# WebAssembly Interpreter</Description>
     <TrimUnusedDependencies>true</TrimUnusedDependencies>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <Title>Wacs</Title>
+    <PackageId>WACS</PackageId>
     <Copyright>(c) 2024 Kelvin Nishikawa</Copyright>
     <PackageProjectUrl>https://github.com/kelnishi/WACS</PackageProjectUrl>
     <RepositoryUrl>https://github.com/kelnishi/WACS</RepositoryUrl>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="README.md">
+      <Pack>true</Pack>
+      <PackagePath/>
+    </None>
+  </ItemGroup>
+  
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <DefineConstants>TRACE;</DefineConstants>
   </PropertyGroup>
@@ -27,12 +41,9 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
+  
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.10.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Instructions\GC\" />
   </ItemGroup>
 
 </Project>
