--- a/Wacs.Console/Wacs.Console.csproj
+++ b/Wacs.Console/Wacs.Console.csproj
@@ -6,12 +6,14 @@
     <LangVersion>9</LangVersion>
     <TargetFramework>net6.0</TargetFramework>
     <OutputType>Exe</OutputType>
-    <AssemblyName>Wacs</AssemblyName>
     <AssemblyVersion>0.0.1</AssemblyVersion>
     <FileVersion>0.0.1</FileVersion>
     <Company>Kelvin Nishikawa</Company>
     <Version>0.0.1</Version>
     <Authors>Kelvin Nishikawa</Authors>
+    <IsPackable>false</IsPackable>
+    <PackageId>Wacs.Console</PackageId>
+    <Product>Wacs.Console</Product>
   </PropertyGroup>
   
   <ItemGroup>
