--- a/Wacs.WASIp1/Wacs.WASIp1.csproj
+++ b/Wacs.WASIp1/Wacs.WASIp1.csproj
@@ -12,6 +12,7 @@
         <PackageProjectUrl>https://github.com/kelnishi/WACS</PackageProjectUrl>
         <RepositoryUrl>https://github.com/kelnishi/WACS</RepositoryUrl>
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <AssemblyName>Wacs.WASIp1</AssemblyName>
         <AssemblyVersion>0.9.0</AssemblyVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Version>0.9.0</Version>
