Adding unity directory as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Spec.Test/wasi"]
 	path = Spec.Test/wasi
 	url = git@github.com:WebAssembly/wasi-testsuite.git
+[submodule "unity"]
+	path = unity
+	url = git@github.com:kelnishi/WACS-Unity.git
