--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ output/
 riderModule.iml
 /_ReSharper.Caches/
 
+/Feature.Detect/generated-wasm/**
 /Spec.Test/generated-json/**
 /Wacs.Console/Data/**
 
