--- a/Wacs.Core/Wacs.Core.csproj
+++ b/Wacs.Core/Wacs.Core.csproj
@@ -5,9 +5,9 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>9</LangVersion>
-    <AssemblyVersion>0.1.6</AssemblyVersion>
-    <FileVersion>0.1.6</FileVersion>
-    <Version>0.1.6</Version>
+    <AssemblyVersion>0.2.0</AssemblyVersion>
+    <FileVersion></FileVersion>
+    <Version>0.2.0</Version>
     <Authors>Kelvin Nishikawa</Authors>
     <Description>A Pure C# WebAssembly Interpreter</Description>
     <TrimUnusedDependencies>true</TrimUnusedDependencies>
