--- a/Wacs.WASIp1/Wacs.WASIp1.csproj
+++ b/Wacs.WASIp1/Wacs.WASIp1.csproj
@@ -17,6 +17,7 @@
         <Version>0.9.3</Version>
         <RepositoryType>git</RepositoryType>
         <TargetFrameworks>netstandard2.1;net8.0</TargetFrameworks>
+        <IsAotCompatible>true</IsAotCompatible>
     </PropertyGroup>
 
     <PropertyGroup>
