--- a/Feature.Detect/Feature.Detect.csproj
+++ b/Feature.Detect/Feature.Detect.csproj
@@ -2,10 +2,10 @@
 
     <PropertyGroup>
         <OutputType>Library</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>9</LangVersion>
+        <TargetFrameworks>net6.0;net8.0;netstandard2.1</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
