--- a/Feature.Detect/Feature.Detect.csproj
+++ b/Feature.Detect/Feature.Detect.csproj
@@ -5,7 +5,7 @@
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>9</LangVersion>
-        <TargetFrameworks>net6.0;net8.0;netstandard2.1</TargetFrameworks>
+        <TargetFrameworks>net8.0;netstandard2.1</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
