--- a/Spec.Test/Spec.Test.csproj
+++ b/Spec.Test/Spec.Test.csproj
@@ -9,7 +9,7 @@
         <Company>Kelvin Nishikawa</Company>
         <Product>Spec.Test</Product>
         <AssemblyVersion>1.0.1</AssemblyVersion>
-        <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
+        <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
